Bug 1403346 - Expand references to the objdir in old-configure. r=glandium
MozReview-Commit-ID: LtReuXQwheR

UltraBlame original commit: 76cbb735d4713452f78fa52c0fab03a42b0d81dc

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -910,6 +910,39 @@ AC_SUBST
 (
 autoconfmk
 )
+if
+test
+-
+n
+"
+JS_STANDALONE
+"
+;
+then
+jsconfdefs
+=
+_objdir
+/
+js
+/
+src
+/
+js
+-
+confdefs
+.
+h
+else
+jsconfdefs
+=
+_objdir
+/
+js
+-
+confdefs
+.
+h
+fi
 MOZ_ANDROID_NDK
 case
 "
@@ -4694,25 +4727,13 @@ _SAVE_LDFLAGS
 )
 _DEFINES_CFLAGS
 =
-'
+"
 -
 include
-(
-topobjdir
-)
-/
-js
-/
-src
-/
-js
--
-confdefs
-.
-h
+jsconfdefs
 -
 DMOZILLA_CLIENT
-'
+"
 _USE_CPP_INCLUDE_FLAG
 =
 1
@@ -4726,25 +4747,13 @@ GNU_CXX
 then
 _DEFINES_CXXFLAGS
 =
-'
+"
 -
 DMOZILLA_CLIENT
 -
 include
-(
-topobjdir
-)
-/
-js
-/
-src
-/
-js
--
-confdefs
-.
-h
-'
+jsconfdefs
+"
 _USE_CPP_INCLUDE_FLAG
 =
 1
@@ -6280,46 +6289,22 @@ _USE_CPP_INCLUDE_FLAG
 1
 _DEFINES_CFLAGS
 =
-'
+"
 -
 FI
-(
-topobjdir
-)
-/
-js
-/
-src
-/
-js
--
-confdefs
-.
-h
+jsconfdefs
 -
 DMOZILLA_CLIENT
-'
+"
 _DEFINES_CXXFLAGS
 =
-'
+"
 -
 FI
-(
-topobjdir
-)
-/
-js
-/
-src
-/
-js
--
-confdefs
-.
-h
+jsconfdefs
 -
 DMOZILLA_CLIENT
-'
+"
 CFLAGS
 =
 "
