--- a/old-configure.in
+++ b/old-configure.in
@@ -5339,12 +5339,10 @@ fi
 fi
 _DEFINES_CFLAGS
 =
-'
+"
 -
 include
-(
-topobjdir
-)
+_objdir
 /
 mozilla
 -
@@ -5353,7 +5351,7 @@ config
 h
 -
 DMOZILLA_CLIENT
-'
+"
 _USE_CPP_INCLUDE_FLAG
 =
 1
@@ -5401,21 +5399,19 @@ aliasing
 "
 _DEFINES_CXXFLAGS
 =
-'
+"
 -
 DMOZILLA_CLIENT
 -
 include
-(
-topobjdir
-)
+_objdir
 /
 mozilla
 -
 config
 .
 h
-'
+"
 _USE_CPP_INCLUDE_FLAG
 =
 1
@@ -7681,12 +7677,10 @@ _USE_CPP_INCLUDE_FLAG
 1
 _DEFINES_CFLAGS
 =
-'
+"
 -
 FI
-(
-topobjdir
-)
+_objdir
 /
 mozilla
 -
@@ -7695,15 +7689,13 @@ config
 h
 -
 DMOZILLA_CLIENT
-'
+"
 _DEFINES_CXXFLAGS
 =
-'
+"
 -
 FI
-(
-topobjdir
-)
+_objdir
 /
 mozilla
 -
@@ -7712,7 +7704,7 @@ config
 h
 -
 DMOZILLA_CLIENT
-'
+"
 CFLAGS
 =
 "
