Bug 1403346 - Use AC_SUBST_LIST for OS_COMPILE_C{XX}FLAGS. r=glandium
MozReview-Commit-ID: Iz2slNFKR81

UltraBlame original commit: 80674bf1fef5c0a7d672d54ea27eb24ec3548753

--- a/old-configure.in
+++ b/old-configure.in
@@ -42548,11 +42548,11 @@ AC_SUBST
 (
 OS_CPPFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_COMPILE_CFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_COMPILE_CXXFLAGS
 )
