Bug 1403346 - Do not set unneeded CFLAGS variables during artifact builds. r=glandium
When we move to a shell aware split for AC_SUBST_LIST it will become an error
to emit an unquoted make variable reference. Currently this happens to only
occur during artifact builds when setting cflags related variables that aren't
needed there anyway, so here we skip settting those variables when a compile
environment isn't present.



MozReview-Commit-ID: EnHu48yyZ1C

UltraBlame original commit: f675216f052e809d2700cce69a8808da990a8517

--- a/old-configure.in
+++ b/old-configure.in
@@ -37569,6 +37569,13 @@ dependencies
 if
 test
 "
+COMPILE_ENVIRONMENT
+"
+;
+then
+if
+test
+"
 GNU_CC
 "
 -
@@ -37900,6 +37907,9 @@ NONASCII
 )
 fi
 fi
+fi
+#
+COMPILE_ENVIRONMENT
 dnl
 =
 =
