Bug 1403346 - Make a separate variable used to append pgo flags to compile command lines. r=glandium
This commit establishes a separate variable to add PROFILE_GEN and PROFILE_USE
CFLAGS to compile and link command lines. Currently the make backend
orchestrates the pgo build steps and is the only thing aware of whether
we're in the profile generate or profile use stage. The flags are separated
here to allow other flags to be moved to mozbuild, but this will not yet
sufficient to perform a PGO build independent of the make backend.

MozReview-Commit-ID: IX30l2MvvNc

UltraBlame original commit: 2b8f53e41e4e86ad4daaf870576f76e899b9c0e5

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -4358,6 +4358,9 @@ CXX
 CXXFLAGS
 )
 (
+PGO_CFLAGS
+)
+(
 DSO_PIC_CFLAGS
 )
 (
@@ -4381,6 +4384,9 @@ CC
 )
 (
 CFLAGS
+)
+(
+PGO_CFLAGS
 )
 (
 DSO_PIC_CFLAGS
@@ -5429,6 +5435,9 @@ CXX
 CXXFLAGS
 )
 (
+PGO_CFLAGS
+)
+(
 DSO_PIC_CFLAGS
 )
 (
@@ -5445,6 +5454,9 @@ CC
 )
 (
 CFLAGS
+)
+(
+PGO_CFLAGS
 )
 (
 DSO_PIC_CFLAGS
