--- a/old-configure.in
+++ b/old-configure.in
@@ -4576,6 +4576,9 @@ CXX
 CXXFLAGS
 )
 (
+PGO_CFLAGS
+)
+(
 DSO_PIC_CFLAGS
 )
 (
@@ -4599,6 +4602,9 @@ CC
 )
 (
 CFLAGS
+)
+(
+PGO_CFLAGS
 )
 (
 DSO_PIC_CFLAGS
@@ -6629,6 +6635,9 @@ CXX
 CXXFLAGS
 )
 (
+PGO_CFLAGS
+)
+(
 DSO_PIC_CFLAGS
 )
 (
@@ -6645,6 +6654,9 @@ CC
 )
 (
 CFLAGS
+)
+(
+PGO_CFLAGS
 )
 (
 DSO_PIC_CFLAGS
