Bug 1403346 - Use AC_SUBST_LIST for various configure variables containing compile flags. r=glandium
MozReview-Commit-ID: 6BjKBSVGAw4

UltraBlame original commit: f11039e7ba7a394f4d186f29d0e586ac65f4b874

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -12905,11 +12905,11 @@ fi
 fi
 #
 COMPILE_ENVIRONMENT
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_FRAMEPTR_FLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_OPTIMIZE_FLAGS
 )
@@ -12917,7 +12917,7 @@ AC_SUBST
 (
 MOZ_OPTIMIZE_LDFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_PGO_OPTIMIZE_FLAGS
 )
@@ -18701,15 +18701,15 @@ OS_LIBS
 "
 LIBS
 "
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_CFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_CXXFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_CPPFLAGS
 )
