--- a/old-configure.in
+++ b/old-configure.in
@@ -32573,11 +32573,11 @@ fi
 fi
 #
 COMPILE_ENVIRONMENT
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_FRAMEPTR_FLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_OPTIMIZE_FLAGS
 )
@@ -32585,7 +32585,7 @@ AC_SUBST
 (
 MOZ_OPTIMIZE_LDFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 MOZ_PGO_OPTIMIZE_FLAGS
 )
@@ -42558,15 +42558,15 @@ OS_LIBS
 "
 LIBS
 "
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_CFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_CXXFLAGS
 )
-AC_SUBST
+AC_SUBST_LIST
 (
 OS_CPPFLAGS
 )
