Bug 1403346 - Move C{XX}FLAGS to mozbuild computed flags. r=glandium
This also introduces C{XX}_LDFLAGS variables which contain cflags that
are meant to be passed to the linker, and adds them to various linker
command lines in place of CFLAGS.

MozReview-Commit-ID: GyKlD9nMqrt

UltraBlame original commit: 3206a73af5455c96649d0192e1507437efc63729

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -4355,7 +4355,7 @@ MKSHLIB
 CXX
 )
 (
-CXXFLAGS
+COMPUTED_CXX_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -4383,7 +4383,7 @@ MKCSHLIB
 CC
 )
 (
-CFLAGS
+COMPUTED_C_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -5432,7 +5432,7 @@ MKSHLIB
 CXX
 )
 (
-CXXFLAGS
+COMPUTED_CXX_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -5453,7 +5453,7 @@ MKCSHLIB
 CC
 )
 (
-CFLAGS
+COMPUTED_C_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -7783,7 +7783,7 @@ MKSHLIB
 CXX
 )
 (
-CXXFLAGS
+COMPUTED_CXX_LDFLAGS
 )
 (
 DSO_PIC_CFLAGS
@@ -7808,7 +7808,7 @@ MKCSHLIB
 CC
 )
 (
-CFLAGS
+COMPUTED_C_LDFLAGS
 )
 (
 DSO_PIC_CFLAGS
