--- a/old-configure.in
+++ b/old-configure.in
@@ -4573,7 +4573,7 @@ MKSHLIB
 CXX
 )
 (
-CXXFLAGS
+COMPUTED_CXX_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -4601,7 +4601,7 @@ MKCSHLIB
 CC
 )
 (
-CFLAGS
+COMPUTED_C_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -6632,7 +6632,7 @@ MKSHLIB
 CXX
 )
 (
-CXXFLAGS
+COMPUTED_CXX_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -6653,7 +6653,7 @@ MKCSHLIB
 CC
 )
 (
-CFLAGS
+COMPUTED_C_LDFLAGS
 )
 (
 PGO_CFLAGS
@@ -9409,7 +9409,7 @@ MKSHLIB
 CXX
 )
 (
-CXXFLAGS
+COMPUTED_CXX_LDFLAGS
 )
 (
 DSO_PIC_CFLAGS
@@ -9434,7 +9434,7 @@ MKCSHLIB
 CC
 )
 (
-CFLAGS
+COMPUTED_C_LDFLAGS
 )
 (
 DSO_PIC_CFLAGS
