Bug 1411784 - Run flake8 task when moz.configure files change; r=ahal
moz.configure files are covered by flake8. Earlier today, my push
in bug 1411784 didn't run flake8 and a flake8 failure was uncovered
by a subsequent push that touched a .py file.

MozReview-Commit-ID: HzL8wOQaqRC

UltraBlame original commit: cb9d057a402ddbc917a19ceef95eb70a93fef813

--- a/taskcluster/ci/source-test/mozlint.yml
+++ b/taskcluster/ci/source-test/mozlint.yml
@@ -442,6 +442,25 @@ py
 .
 flake8
 '
+#
+moz
+.
+configure
+files
+are
+also
+Python
+files
+.
+-
+'
+*
+*
+/
+*
+.
+configure
+'
 test
 -
 manifest
