Bug 1400655 P2 Add a mochitest to verify the json viewer is shown for json intercepted by a service worker. r=jryans
UltraBlame original commit: 574b5b042c3c4964b1837fcbcb23557c29be51e9

--- a/devtools/client/jsonview/test/browser.ini
+++ b/devtools/client/jsonview/test/browser.ini
@@ -32,6 +32,9 @@ headers
 doc_frame_script
 .
 js
+empty
+.
+html
 head
 .
 js
@@ -53,6 +56,11 @@ json
 ^
 headers
 ^
+passthrough
+-
+sw
+.
+js
 simple_json
 .
 json
@@ -324,6 +332,11 @@ js
 ]
 [
 browser_json_refresh
+.
+js
+]
+[
+browser_jsonview_serviceworker
 .
 js
 ]
