Bug 1410248 - Disable all speech-api web platform tests until they can run reliably. r=me
UltraBlame original commit: 34cbb525ecce59e6ac98d8e0cc1cfc627589124b

--- a/testing/web-platform/meta/speech-api/SpeechSynthesis-speak-ownership.html.ini
+++ b/testing/web-platform/meta/speech-api/SpeechSynthesis-speak-ownership.html.ini
@@ -7,6 +7,25 @@ ownership
 .
 html
 ]
+disabled
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1410248
 [
 Using
 the
