Bug 1360587 - Part 2. Remove bouncer apk build config; source; docs, r=nalexander
MozReview-Commit-ID: C1QJcr65yWu

UltraBlame original commit: 31f87080283b1dc558f3781e0ec2ca59d102de82

--- a/mobile/android/base/AndroidManifest.xml.in
+++ b/mobile/android/base/AndroidManifest.xml.in
@@ -119,75 +119,31 @@ ANDROID_TARGET_SDK
 -
 -
 The
+separated
+permission
+file
+is
+for
 bouncer
-APK
-and
-the
-main
-APK
-should
-define
-the
-same
-set
-of
-<
-permission
->
-<
-uses
--
-permission
->
-and
-<
-uses
--
-feature
->
-elements
 .
-This
-reduces
-the
-likelihood
-of
-permission
--
-related
-surprises
-when
-installing
-the
-main
-APK
-on
-top
-of
-a
-pre
--
-installed
-bouncer
-APK
+apk
 .
-Add
-such
-shared
-elements
-in
-the
-fileincluded
-here
-so
-that
-they
+Since
+it
+'
+s
+removed
+we
 can
-be
-referenced
-by
-both
-APKs
+merge
+the
+permission
+declaration
+back
+.
+See
+Bug
+1411809
 .
 -
 -
