--- a/netwerk/test/unit_ipc/xpcshell.ini
+++ b/netwerk/test/unit_ipc/xpcshell.ini
@@ -671,6 +671,17 @@ unit
 test_multipart_streamconv
 .
 js
+!
+/
+netwerk
+/
+test
+/
+unit
+/
+test_original_sent_received_head
+.
+js
 [
 test_bug528292_wrap
 .
