--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
@@ -2220,6 +2220,24 @@ tags
 =
 webextensions
 [
+test_webextension_langpack
+.
+js
+]
+skip
+-
+if
+=
+appname
+=
+=
+"
+thunderbird
+"
+tags
+=
+webextensions
+[
 test_webextension_install_syntax_error
 .
 js
