--- a/browser/base/content/test/sync/browser.ini
+++ b/browser/base/content/test/sync/browser.ini
@@ -40,3 +40,28 @@ browser_fxa_badge
 .
 js
 ]
+[
+browser_aboutAccounts
+.
+js
+]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+#
+Bug
+958026
+support
+-
+files
+=
+content_aboutAccounts
+.
+js
