Bug 1378079 - Part 3: Complete the steps related to custom elements in "create an element for a token". r=hsivonen,smaug
UltraBlame original commit: 11ef829cb8e6f559957272eb79e8b721e1d4bcc8

--- a/dom/tests/mochitest/webcomponents/mochitest.ini
+++ b/dom/tests/mochitest/webcomponents/mochitest.ini
@@ -46,6 +46,17 @@ test_custom_element_callback_innerhtml
 .
 html
 ]
+skip
+-
+if
+=
+true
+#
+disabled
+-
+See
+bug
+1390396
 [
 test_custom_element_clone_callbacks_extended
 .
@@ -102,6 +113,11 @@ bug
 1390396
 [
 test_custom_element_register_invalid_callbacks
+.
+html
+]
+[
+test_custom_element_throw_on_dynamic_markup_insertion
 .
 html
 ]
@@ -167,11 +183,6 @@ html
 ]
 [
 test_document_register
-.
-html
-]
-[
-test_document_register_base_queue
 .
 html
 ]
