--- a/devtools/client/jsonview/test/browser.ini
+++ b/devtools/client/jsonview/test/browser.ini
@@ -32,6 +32,9 @@ headers
 doc_frame_script
 .
 js
+empty
+.
+html
 head
 .
 js
@@ -53,6 +56,11 @@ json
 ^
 headers
 ^
+passthrough
+-
+sw
+.
+js
 simple_json
 .
 json
@@ -119,11 +127,6 @@ js
 ]
 [
 browser_jsonview_ignore_charset
-.
-js
-]
-[
-browser_jsonview_content_type
 .
 js
 ]
@@ -329,6 +332,11 @@ js
 ]
 [
 browser_json_refresh
+.
+js
+]
+[
+browser_jsonview_serviceworker
 .
 js
 ]
