Bug 1364942 - Allow WebExtensions to disable Web API notifications, r=mixedpuppy
This works by allowing an extension to set a value of Services.perms.DENY_ACTION
for permissions.default.desktop-notification, which stores the default permission
for desktop notifications. This means that if no permissions have been explicitly
set for a given page, the default will be used, but if a user overrides the permissions
for a specific page then their chosen permission will override this default.

An extension can only use this to make the default behaviour to disable notifications.
It cannot be used to globally enable notifications.

MozReview-Commit-ID: H5bDZe1ICiC

UltraBlame original commit: 2ac09a374b698d7cbb4cc50bf8245305aa07a347

--- a/toolkit/components/extensions/schemas/browser_settings.json
+++ b/toolkit/components/extensions/schemas/browser_settings.json
@@ -373,6 +373,31 @@ only
 .
 "
 }
+"
+webNotificationsDisabled
+"
+:
+{
+"
+ref
+"
+:
+"
+types
+.
+Setting
+"
+"
+description
+"
+:
+"
+Disables
+webAPI
+notifications
+.
+"
+}
 }
 }
 ]
