Backed out changeset 17ef68e368bb (bug 1362617) for build bustage on OS X. r=backout on a CLOSED TREE
UltraBlame original commit: 5422ee19b1f527414a8684db05b401327e52e9c9

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -307,6 +307,36 @@ AB_CD
 ]
 RESPATH
 /
+browser
+/
+chrome
+/
+AB_CD
+JAREXT
+RESPATH
+/
+browser
+/
+chrome
+/
+AB_CD
+.
+manifest
+RESPATH
+/
+chrome
+/
+AB_CD
+JAREXT
+RESPATH
+/
+chrome
+/
+AB_CD
+.
+manifest
+RESPATH
+/
 dictionaries
 /
 *
@@ -5022,13 +5052,5 @@ components
 BHRTelemetryService
 .
 manifest
-#
-endif
-#
-ifdef
-PKG_LOCALE_MANIFEST
-#
-include
-PKG_LOCALE_MANIFEST
 #
 endif
