Bug 1362617 - Generalize MOZ_CHROME_MULTILOCALE to work for browser as well. r=gps,mshal,Pike,ted
MozReview-Commit-ID: 80ldQPhNyi7

UltraBlame original commit: 17ef68e368bbfe2db437d6156a0cf38d49f23ced

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -307,36 +307,6 @@ AB_CD
 ]
 RESPATH
 /
-browser
-/
-chrome
-/
-AB_CD
-JAREXT
-RESPATH
-/
-browser
-/
-chrome
-/
-AB_CD
-.
-manifest
-RESPATH
-/
-chrome
-/
-AB_CD
-JAREXT
-RESPATH
-/
-chrome
-/
-AB_CD
-.
-manifest
-RESPATH
-/
 dictionaries
 /
 *
@@ -5052,5 +5022,13 @@ components
 BHRTelemetryService
 .
 manifest
+#
+endif
+#
+ifdef
+PKG_LOCALE_MANIFEST
+#
+include
+PKG_LOCALE_MANIFEST
 #
 endif
