--- a/browser/installer/Makefile.in
+++ b/browser/installer/Makefile.in
@@ -106,6 +106,37 @@ allowed
 dupes
 .
 mn
+DEFINES
++
+=
+-
+DPKG_LOCALE_MANIFEST
+=
+(
+topobjdir
+)
+/
+browser
+/
+installer
+/
+locale
+-
+manifest
+.
+in
+MOZ_CHROME_LOCALE_ENTRIES
+=
+RESPATH
+/
+browser
+/
+chrome
+/
+RESPATH
+/
+chrome
+/
 #
 Some
 files
