Bug 1411005 - Update Harfbuzz to version 1.6.3. r=jfkthame
UltraBlame original commit: e7f095ae94d8ac5583248e56d1e3cb995600b0ca

--- a/gfx/harfbuzz/configure.ac
+++ b/gfx/harfbuzz/configure.ac
@@ -16,7 +16,7 @@ HarfBuzz
 .
 6
 .
-0
+3
 ]
 [
 https
@@ -477,6 +477,24 @@ LDFLAGS
 Bsymbolic
 -
 functions
+"
+#
+Choose
+C
++
++
+version
+CXXFLAGS
+=
+"
+CXXFLAGS
+-
+std
+=
+c
++
++
+11
 "
 #
 Make
