Bug 1411342 - reduce chunks for mochitests on linux now that we run on faster hardware. r=gbrown
UltraBlame original commit: 801369e5614a0b1efd7afeb9ccf2dd2206f05d80

--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -205,35 +205,31 @@ android
 *
 :
 20
-macosx
-.
-*
-:
-5
-windows
-.
-*
-:
-5
-linux32
-/
-debug
-:
-16
-linux32
--
-stylo
--
-disabled
-/
-debug
-:
-16
 linux
 .
 *
+/
+debug
+:
+16
+linux64
+-
+asan
+/
+opt
 :
 10
+linux64
+-
+*
+cov
+/
+opt
+:
+10
+default
+:
+5
 e10s
 :
 by
@@ -537,16 +533,9 @@ test
 -
 platform
 :
-linux64
-/
-debug
-:
-16
-linux64
--
-stylo
--
-disabled
+linux
+.
+*
 /
 debug
 :
@@ -565,20 +554,6 @@ jsdcov
 opt
 :
 35
-linux32
-/
-debug
-:
-16
-linux32
--
-stylo
--
-disabled
-/
-debug
-:
-16
 default
 :
 7
@@ -621,42 +596,15 @@ platform
 :
 linux64
 -
-jsdcov
+*
+cov
 /
 opt
 :
 7200
-linux64
--
-ccov
-/
-opt
-:
-7200
-linux64
-/
-debug
-:
-5400
-linux64
--
-stylo
--
-disabled
-/
-debug
-:
-5400
-linux32
-/
-debug
-:
-5400
-linux32
--
-stylo
--
-disabled
+linux
+.
+*
 /
 debug
 :
@@ -1294,19 +1242,9 @@ test
 -
 platform
 :
-windows
-.
-*
-:
-8
-macosx
-.
-*
-:
-8
 default
 :
-10
+8
 e10s
 :
 by
@@ -1630,11 +1568,6 @@ test
 -
 platform
 :
-android
-.
-*
-:
-3
 macosx64
 .
 *
@@ -1760,11 +1693,11 @@ platform
 linux
 .
 *
+/
+debug
 :
-10
-windows
-.
-*
+16
+default
 :
 5
 e10s
