--- a/devtools/client/inspector/animation/test/browser.ini
+++ b/devtools/client/inspector/animation/test/browser.ini
@@ -11,6 +11,9 @@ support
 -
 files
 =
+doc_simple_animation
+.
+html
 head
 .
 js
@@ -89,6 +92,16 @@ test
 actor
 .
 js
+[
+browser_animation_animation_list_exists
+.
+js
+]
+[
+browser_animation_empty_on_invalid_nodes
+.
+js
+]
 [
 browser_animation_inspector_exists
 .
