Bug 1379515 - Run test_restyles.html in content. r=birtles
MozReview-Commit-ID: 7PPYQYBIo5Y

UltraBlame original commit: 92408ba892fa467aa3a7db4e353dd08d6a354bf9

--- a/dom/animation/test/mochitest.ini
+++ b/dom/animation/test/mochitest.ini
@@ -437,6 +437,11 @@ file_hide_and_show
 html
 mozilla
 /
+file_restyles
+.
+html
+mozilla
+/
 file_restyling_xhr_doc
 .
 html
@@ -1077,6 +1082,26 @@ properties
 .
 html
 ]
+[
+mozilla
+/
+test_restyles
+.
+html
+]
+skip
+-
+if
+=
+os
+=
+=
+'
+android
+'
+#
+bug
+1335986
 [
 mozilla
 /
