Bug 1404842 - P2: Revise expected test results under shadow-dom, r=smaug
MozReview-Commit-ID: IYfyAa7h4JN

UltraBlame original commit: 35c583b7a264272087f4fad9cf5c5c1476f80e6d

--- a/testing/web-platform/meta/shadow-dom/MouseEvent-prototype-offsetX-offsetY.html.ini
+++ b/testing/web-platform/meta/shadow-dom/MouseEvent-prototype-offsetX-offsetY.html.ini
@@ -12,9 +12,6 @@ html
 type
 :
 testharness
-expected
-:
-ERROR
 [
 MouseEvent
 '
@@ -29,6 +26,63 @@ relative
 to
 the
 target
+.
+]
+expected
+:
+FAIL
+[
+MouseEvent
+'
+s
+offsetX
+and
+offsetY
+attributes
+must
+be
+relative
+to
+the
+shadow
+host
+when
+an
+event
+is
+dispatched
+inside
+its
+shadow
+tree
+.
+]
+expected
+:
+FAIL
+[
+MouseEvent
+'
+s
+offsetX
+and
+offsetY
+attributes
+must
+be
+relative
+to
+the
+target
+when
+an
+event
+is
+dispatched
+on
+a
+slotted
+content
 .
 ]
 expected
