--- a/testing/web-platform/meta/shadow-dom/slots-fallback-in-document.html.ini
+++ b/testing/web-platform/meta/shadow-dom/slots-fallback-in-document.html.ini
@@ -13,16 +13,42 @@ type
 :
 testharness
 [
-Shadow
-DOM
-:
-Slots
-and
-fallback
-contents
+Children
+of
+a
+slot
 in
-Document
+a
+document
 tree
+should
+not
+be
+counted
+in
+flattened
+assigned
+nodes
+.
+]
+expected
+:
+FAIL
+[
+Slot
+fallback
+content
+in
+shadow
+tree
+should
+be
+counted
+in
+flattened
+assigned
+nodes
+.
 ]
 expected
 :
