--- a/testing/web-platform/meta/shadow-dom/Document-prototype-currentScript.html.ini
+++ b/testing/web-platform/meta/shadow-dom/Document-prototype-currentScript.html.ini
@@ -12,55 +12,7 @@ type
 testharness
 expected
 :
-TIMEOUT
-[
-document
-.
-currentScript
-must
-not
-to
-be
-set
-to
-a
-script
-element
-in
-a
-shadow
-tree
-in
-open
-mode
-]
-expected
-:
-FAIL
-[
-document
-.
-currentScript
-must
-not
-to
-be
-set
-to
-a
-script
-element
-in
-a
-shadow
-tree
-in
-closed
-mode
-]
-expected
-:
-FAIL
+ERROR
 [
 document
 .
@@ -112,64 +64,4 @@ tree
 ]
 expected
 :
-NOTRUN
-[
-document
-.
-currentScript
-must
-be
-set
-to
-a
-script
-element
-that
-loads
-an
-external
-script
-that
-was
-in
-an
-open
-shadow
-tree
-and
-then
-removed
-]
-expected
-:
-NOTRUN
-[
-document
-.
-currentScript
-must
-be
-set
-to
-a
-script
-element
-that
-loads
-an
-external
-script
-that
-was
-in
-a
-closed
-shadow
-tree
-and
-then
-removed
-]
-expected
-:
-NOTRUN
+FAIL
