--- a/testing/web-platform/meta/shadow-dom/event-post-dispatch.html.ini
+++ b/testing/web-platform/meta/shadow-dom/event-post-dispatch.html.ini
@@ -9,7 +9,7 @@ html
 ]
 expected
 :
-ERROR
+OK
 [
 Event
 properties
@@ -40,6 +40,256 @@ composed
 false
 )
 .
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+an
+open
+ShadowRoot
+(
+composed
+:
+true
+)
+.
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+an
+open
+ShadowRoot
+(
+composed
+:
+false
+)
+.
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+a
+closed
+ShadowRoot
+(
+composed
+:
+true
+)
+.
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+a
+closed
+ShadowRoot
+(
+composed
+:
+false
+)
+.
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+nested
+ShadowRoots
+(
+composed
+:
+true
+)
+.
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+nested
+ShadowRoots
+(
+composed
+:
+false
+)
+.
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+relatedTarget
+in
+the
+same
+shadow
+tree
+.
+(
+composed
+:
+true
+)
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+relatedTarget
+in
+the
+same
+shadow
+tree
+.
+(
+composed
+:
+false
+)
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+relatedTarget
+in
+the
+document
+tree
+and
+the
+shadow
+tree
+.
+(
+composed
+:
+true
+)
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+relatedTarget
+in
+the
+document
+tree
+and
+the
+shadow
+tree
+.
+(
+composed
+:
+false
+)
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+relatedTarget
+in
+the
+different
+shadow
+trees
+.
+(
+composed
+:
+true
+)
+]
+expected
+:
+FAIL
+[
+Event
+properties
+post
+dispatch
+with
+relatedTarget
+in
+the
+different
+shadow
+trees
+.
+(
+composed
+:
+false
+)
 ]
 expected
 :
