--- a/testing/web-platform/meta/shadow-dom/leaktests/get-elements.html.ini
+++ b/testing/web-platform/meta/shadow-dom/leaktests/get-elements.html.ini
@@ -9,7 +9,46 @@ type
 :
 testharness
 [
-Untitled
+getElementsByClassName
+(
+)
+should
+not
+leak
+nodes
+in
+shadow
+tree
+]
+expected
+:
+FAIL
+[
+getElementsByName
+(
+)
+should
+not
+leak
+nodes
+in
+shadow
+tree
+]
+expected
+:
+FAIL
+[
+getElementsByTagName
+(
+)
+should
+not
+leak
+nodes
+in
+shadow
+tree
 ]
 expected
 :
