--- a/testing/web-platform/meta/shadow-dom/slotchange.html.ini
+++ b/testing/web-platform/meta/shadow-dom/slotchange.html.ini
@@ -6,6 +6,27 @@ html
 type
 :
 testharness
+disabled
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1404842
+#
+c18
 [
 slotchange
 event
