Bug 1404842 - P4: Revise expected test results under other folders, r=smaug
MozReview-Commit-ID: 4SSW3ZLKHMy

UltraBlame original commit: 06d7f7a08c8a27f950471a47cbbcadde67330008

--- a/testing/web-platform/meta/content-security-policy/securitypolicyviolation/targeting.html.ini
+++ b/testing/web-platform/meta/content-security-policy/securitypolicyviolation/targeting.html.ini
@@ -6,6 +6,17 @@ html
 type
 :
 testharness
+prefs
+:
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
 expected
 :
 TIMEOUT
@@ -44,9 +55,27 @@ handler
 )
 .
 ]
-expected
+disabled
 :
-FAIL
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1404842
+#
+c19
 [
 Correct
 targeting
@@ -58,9 +87,27 @@ style
 )
 .
 ]
-expected
+disabled
 :
-FAIL
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1404842
+#
+c19
 [
 Elements
 created
