--- a/testing/web-platform/meta/custom-elements/adopted-callback.html.ini
+++ b/testing/web-platform/meta/custom-elements/adopted-callback.html.ini
@@ -8,31 +8,17 @@ html
 type
 :
 testharness
-[
-Inserting
-a
-custom
-element
-into
-a
-shadow
-tree
-in
-the
-document
-of
-the
-template
-elements
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
+prefs
 :
-FAIL
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
 [
 Inserting
 the
@@ -89,56 +75,6 @@ expected
 FAIL
 [
 Inserting
-a
-custom
-element
-into
-a
-detached
-shadow
-tree
-that
-belongs
-to
-the
-document
-of
-the
-template
-elements
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-shadow
-tree
-in
-a
-new
-document
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
 the
 shadow
 host
@@ -175,53 +111,6 @@ document
 into
 a
 new
-document
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-detached
-shadow
-tree
-that
-belongs
-to
-a
-new
-document
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-shadow
-tree
-in
-a
-cloned
 document
 must
 enqueue
@@ -282,55 +171,6 @@ expected
 FAIL
 [
 Inserting
-a
-custom
-element
-into
-a
-detached
-shadow
-tree
-that
-belongs
-to
-a
-cloned
-document
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-shadow
-tree
-in
-a
-document
-created
-by
-createHTMLDocument
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
 the
 shadow
 host
@@ -372,58 +212,6 @@ document
 created
 by
 createHTMLDocument
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-detached
-shadow
-tree
-that
-belongs
-to
-a
-document
-created
-by
-createHTMLDocument
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-shadow
-tree
-in
-an
-HTML
-document
-created
-by
-createDocument
 must
 enqueue
 and
@@ -489,58 +277,6 @@ expected
 FAIL
 [
 Inserting
-a
-custom
-element
-into
-a
-detached
-shadow
-tree
-that
-belongs
-to
-an
-HTML
-document
-created
-by
-createDocument
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-shadow
-tree
-in
-the
-document
-of
-an
-iframe
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
 the
 shadow
 host
@@ -582,58 +318,6 @@ document
 of
 an
 iframe
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-detached
-shadow
-tree
-that
-belongs
-to
-the
-document
-of
-an
-iframe
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-shadow
-tree
-in
-an
-HTML
-document
-fetched
-by
-XHR
 must
 enqueue
 and
@@ -682,34 +366,6 @@ the
 owner
 document
 into
-an
-HTML
-document
-fetched
-by
-XHR
-must
-enqueue
-and
-invoke
-adoptedCallback
-]
-expected
-:
-FAIL
-[
-Inserting
-a
-custom
-element
-into
-a
-detached
-shadow
-tree
-that
-belongs
-to
 an
 HTML
 document
