--- a/testing/web-platform/meta/custom-elements/reactions/Element.html.ini
+++ b/testing/web-platform/meta/custom-elements/reactions/Element.html.ini
@@ -6,42 +6,17 @@ html
 type
 :
 testharness
-[
-slot
-on
-Element
-must
-enqueue
-an
-attributeChanged
-reaction
-when
-adding
-slot
-content
-attribute
-]
-expected
+prefs
 :
-FAIL
 [
-slot
-on
-Element
-must
-enqueue
-an
-attributeChanged
-reaction
-when
-replacing
-an
-existing
-attribute
-]
-expected
+dom
+.
+webcomponents
+.
+enabled
 :
-FAIL
+true
+]
 [
 removeAttribute
 on
