--- a/testing/web-platform/meta/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/not-in-shadow-tree.html.ini
+++ b/testing/web-platform/meta/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/not-in-shadow-tree.html.ini
@@ -12,22 +12,14 @@ html
 type
 :
 testharness
-[
-Meta
-refresh
-only
-applies
-while
-in
-the
-document
-tree
-not
-in
-a
-shadow
-tree
-]
-expected
+prefs
 :
-FAIL
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
