--- a/testing/web-platform/meta/html/semantics/forms/the-form-element/form-elements-filter.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-form-element/form-elements-filter.html.ini
@@ -10,19 +10,14 @@ html
 type
 :
 testharness
-[
-form
-.
-elements
-only
-includes
-elements
-from
-the
-same
-shadow
-tree
-]
-expected
+prefs
 :
-FAIL
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
