--- a/testing/web-platform/meta/cssom-view/elementsFromPoint-shadowroot.html.ini
+++ b/testing/web-platform/meta/cssom-view/elementsFromPoint-shadowroot.html.ini
@@ -8,8 +8,47 @@ html
 type
 :
 testharness
+prefs
+:
 [
-Untitled
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
+[
+elementsFromPoint
+on
+the
+document
+root
+should
+not
+return
+elements
+in
+shadow
+trees
+]
+expected
+:
+FAIL
+[
+elementsFromPoint
+on
+a
+shadow
+root
+should
+include
+elements
+in
+that
+shadow
+tree
 ]
 expected
 :
