--- a/testing/web-platform/meta/touch-events/touch-retargeting.html.ini
+++ b/testing/web-platform/meta/touch-events/touch-retargeting.html.ini
@@ -8,10 +8,29 @@ html
 type
 :
 testharness
+prefs
+:
+[
+dom
+.
+webcomponents
+.
+enabled
+:
+true
+]
 [
 TouchEvent
-Retargeting
-Tests
+'
+s
+touches
+targetTouches
+and
+changedTouches
+should
+be
+retargeted
+.
 ]
 expected
 :
