Bug 1362440 - part3 : add tests. r=jya
MozReview-Commit-ID: C4mXuPsMaF4

UltraBlame original commit: f072fb95a7b8e4cf4a85777fbad7f77af561b86c

--- a/dom/media/mediasource/test/mochitest.ini
+++ b/dom/media/mediasource/test/mochitest.ini
@@ -817,6 +817,20 @@ m4s
 ^
 headers
 ^
+tags_before_cluster
+.
+webm
+tags_before_cluster
+.
+webm
+^
+header
+^
+[
+test_AppendPartialInitSegment
+.
+html
+]
 [
 test_AVC3_mp4
 .
@@ -1861,3 +1875,8 @@ Not
 supported
 on
 android
+[
+test_WebMTagsBeforeCluster
+.
+html
+]
