Bug 1411686 - Pre: Fix JNI wrapper dependencies. r=maliu
When built as part of a consuming application, a library's bundle*
target is called but not its assemble* target.  (When built by itself
for distribution, a library's assemble* target is called.)  This
corrects the wrapper dependencies.

MozReview-Commit-ID: 9ooHMNPK2U4

UltraBlame original commit: 1b2815b0c7f728b0cba209ccfa58b1dcb60a36d2

--- a/mobile/android/gradle/with_gecko_binaries.gradle
+++ b/mobile/android/gradle/with_gecko_binaries.gradle
@@ -1181,39 +1181,20 @@ module
 >
 def
 jarTask
-=
-tasks
-.
-findByName
-(
-"
-jar
-{
-variant
-.
-name
-.
-capitalize
-(
-)
-}
-Classes
-"
-)
 if
 (
-jarTask
+module
 =
 =
-null
+'
+Generated
+'
 )
 {
 jarTask
 =
 tasks
-.
-findByName
-(
+[
 "
 package
 {
@@ -1227,27 +1208,14 @@ capitalize
 }
 JarArtifact
 "
-)
+]
 }
-if
-(
+else
+{
 jarTask
 =
-=
-null
-)
-{
-throw
-new
-GradleException
-(
-"
-Jar
-task
-not
-found
-:
-\
+tasks
+[
 "
 jar
 {
@@ -1260,27 +1228,8 @@ capitalize
 )
 }
 Classes
-\
 "
-\
-t
-\
-"
-package
-{
-variant
-.
-name
-.
-capitalize
-(
-)
-}
-JarArtifact
-\
-"
-"
-)
+]
 }
 if
 (
@@ -1608,10 +1557,54 @@ jarTask
 dependsOn
 prepareDependenciesTask
 }
+if
+(
+module
+=
+=
+'
+Generated
+'
+)
+{
+tasks
+[
+"
+bundle
+{
 variant
 .
-assemble
+name
+.
+capitalize
+(
+)
+}
+"
+]
 .
 dependsOn
 wrapperTask
+}
+else
+{
+tasks
+[
+"
+assemble
+{
+variant
+.
+name
+.
+capitalize
+(
+)
+}
+"
+]
+.
+dependsOn
+wrapperTask
+}
 }
