Bug 1411686 - Part 1: Force Gradle to run during |mach package|. r=maliu
It looks like I didn't handle this flow -- which only matters during
l10n multi-locale builds and l10n single-locale repacks -- during the
initial Gradle landing.  Now we need to handle it.

Remember that the l10n process runs |mach build && mach package|, and
then modifies the object directory by inserting new localized resource
files.  It then runs |mach package| again and expects to regenerate
the ap_ file, ready to splice it into the existing apk file.  The
existing code just copied the .ap_ built by Gradle without
regenerating the ap_ file.  This commit forces running Gradle again,
which will pick up the new resources in the object directory.

The chain of dependencies is:

|mach package| > gecko-nodeps.ap_ > .aapt.nodeps > .gradle.deps

and the latter two targets are FORCE, so they always get run
(regardless of the freshness of the inputs).

In fact, this runs the entire Gradle process again, including
producing classes.dex.  (The moz.build process doesn't compile the
Java source code again.)  This patch changes the existing behaviour to
copy the regenerated classes.dex into the repacked apk and avoid the
need for the R.java IDs to line up across the |mach build| and |mach
package| invocations.  This turned out to be necessary to support
multi-locale builds with newer Gradle versions, which don't appear to
preserve aapt R.java IDs across the

|mach build|, |mach package|, |mach compare-locales|, |mach package|

chain.

MozReview-Commit-ID: FlhtQPwR5xG

UltraBlame original commit: 11aeb89a63f0e5dcbcfb13c6847ccdcf4e9c729e

--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -1382,16 +1382,15 @@ library_jars
 )
 ifdef
 MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
-.
-gradle
-.
-deps
+define
+gradle_command
+(
+1
+)
 :
-.
-aapt
-.
-deps
-FORCE
+(
+2
+)
 (
 TOUCH
 )
@@ -1421,6 +1420,34 @@ assembleOfficialPhotonDebugAndroidTest
 -
 x
 lint
+endef
+#
+.
+gradle
+.
+deps
+:
+.
+aapt
+.
+deps
+FORCE
+(
+eval
+(
+call
+gradle_command
+.
+gradle
+.
+deps
+.
+aapt
+.
+deps
+FORCE
+)
+)
 classes
 .
 dex
@@ -3912,12 +3939,96 @@ generated
 )
 ifdef
 MOZ_BUILD_MOBILE_ANDROID_WITH_GRADLE
+#
+It
+'
+s
+not
+quite
+"
+no
+dependencies
+"
+:
+nodeps
+means
+that
+it
+doesn
+'
+t
+#
+depend
+on
+the
+generated
+resources
+that
+incorporate
+l10n
+principally
+#
+strings
+.
+xml
+.
+#
+.
+gradle
+.
+nodeps
+:
+AndroidManifest
+.
+xml
+generated
+/
+preprocessed
+/
+org
+/
+mozilla
+/
+gecko
+/
+AppConstants
+.
+java
+.
+.
+.
+FORCE
+(
+eval
+(
+call
+gradle_command
+.
+gradle
+.
+nodeps
+AndroidManifest
+.
+xml
+(
+constants_PP_JAVAFILES
+)
+FORCE
+)
+)
 .
 aapt
 .
 nodeps
 :
+.
+gradle
+.
+nodeps
 FORCE
+(
+TOUCH
+)
 cp
 (
 gradle_dir
@@ -3943,6 +4054,37 @@ gecko
 nodeps
 .
 ap_
+cp
+(
+gradle_dir
+)
+/
+app
+/
+intermediates
+/
+transforms
+/
+dex
+/
+officialPhoton
+/
+debug
+/
+folders
+/
+1000
+/
+1f
+/
+main
+/
+classes
+.
+dex
+classes
+.
+dex
 else
 #
 .
