Bug 1411686 - Part 2: Don't invoke |make gradle-targets| for AB_CD=multi. r=maliu
This work-around isn't needed for the moz.build system because there's
no equivalent of the

|mach build| > |mach gradle| > |make gradle-targets|

dependency chain that "re-enters" Make processing.  That is, the
nodeps mechanism ensures that nothing in m/a/b/Makefile.in (that knows
about AB_CD) ever sees AB_CD=multi.

MozReview-Commit-ID: qZKAtlLhJw

UltraBlame original commit: 1e44cf9fed8b781f1b47294f93a5c7efdafb5d8c

--- a/build.gradle
+++ b/build.gradle
@@ -333,6 +333,123 @@ plugin
 '
 }
 }
+if
+(
+'
+multi
+'
+=
+=
+System
+.
+env
+.
+AB_CD
+)
+{
+/
+/
+Multi
+-
+l10n
+builds
+set
+AB_CD
+=
+multi
+which
+isn
+'
+t
+a
+valid
+locale
+.
+This
+/
+/
+causes
+the
+/
+/
+/
+/
+|
+mach
+build
+|
+>
+|
+mach
+gradle
+|
+>
+|
+make
+gradle
+-
+targets
+|
+>
+AndroidManifest
+.
+xml
+>
+strings
+.
+xml
+>
+multi
+/
+brand
+.
+dtd
+/
+/
+/
+/
+dependency
+chain
+to
+fail
+since
+multi
+isn
+'
+t
+a
+real
+locale
+.
+To
+avoid
+/
+/
+this
+if
+Gradle
+is
+invoked
+with
+AB_CD
+=
+multi
+we
+don
+'
+t
+invoke
+Make
+at
+all
+.
+task
+generateCodeAndResources
+(
+)
+}
+else
+{
 task
 generateCodeAndResources
 (
@@ -448,6 +565,7 @@ toString
 }
 "
 )
+}
 }
 }
 }
