--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -4398,6 +4398,8 @@ notdir
 OMNIJAR_NAME
 )
 )
+ifndef
+MOZILLA_OFFICIAL
 #
 Targets
 built
@@ -4407,6 +4409,52 @@ during
 a
 Gradle
 build
+.
+In
+automation
+#
+these
+are
+built
+before
+Gradle
+is
+invoked
+by
+.
+gradle
+.
+deps
+and
+#
+gradle
+-
+targets
+is
+not
+made
+at
+all
+.
+This
+is
+required
+to
+avoid
+#
+building
+gradle
+-
+targets
+with
+AB_CD
+=
+multi
+during
+multi
+-
+l10n
+builds
 .
 gradle
 -
@@ -4436,8 +4484,6 @@ targets
 (
 ANDROID_GENERATED_RESFILES
 )
-ifndef
-MOZILLA_OFFICIAL
 #
 Local
 developers
@@ -4494,6 +4540,10 @@ packaging
 gradle
 -
 omnijar
+:
+gradle
+-
+targets
 :
 endif
 .
