--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -830,26 +830,6 @@ sourceSets
 {
 main
 {
-manifest
-.
-srcFile
-"
-{
-project
-.
-buildDir
-}
-/
-generated
-/
-source
-/
-preprocessed_manifest
-/
-AndroidManifest
-.
-xml
-"
 aidl
 {
 srcDir
@@ -1287,6 +1267,103 @@ app
 assets
 "
 }
+}
+/
+/
+Every
+configuration
+needs
+the
+stub
+manifest
+at
+/
+/
+src
+/
+main
+/
+AndroidManifest
+.
+xml
+and
+the
+generated
+manifest
+.
+We
+can
+'
+t
+/
+/
+use
+the
+main
+sourceSet
+without
+losing
+the
+stub
+so
+we
+cover
+all
+the
+/
+/
+configurations
+by
+enumerating
+the
+buildTypes
+here
+.
+debug
+{
+manifest
+.
+srcFile
+"
+{
+project
+.
+buildDir
+}
+/
+generated
+/
+source
+/
+preprocessed_manifest
+/
+AndroidManifest
+.
+xml
+"
+}
+release
+{
+manifest
+.
+srcFile
+"
+{
+project
+.
+buildDir
+}
+/
+generated
+/
+source
+/
+preprocessed_manifest
+/
+AndroidManifest
+.
+xml
+"
 }
 test
 {
