Bug 1412037 - Release webdriver crate 0.32.0. r=jgraham
A release of the webdriver crate is necessary for the release build
to pass on Travis, since testing/geckodriver/Cargo.toml cannot
depend on testing/webdriver as it is exported to the GitHub repository.

MozReview-Commit-ID: 1S2aAtg50t4

UltraBlame original commit: 047b0a0c8312d9e8e51cd6a1e80b55393cbfc989

--- a/testing/webdriver/Cargo.toml
+++ b/testing/webdriver/Cargo.toml
@@ -11,7 +11,7 @@ version
 "
 0
 .
-31
+32
 .
 0
 "
@@ -20,16 +20,15 @@ authors
 [
 "
 Mozilla
-Tools
-and
-Automation
 <
 tools
+-
+marionette
 lists
 .
 mozilla
 .
-com
+org
 >
 "
 ]
