Bug 1412037 - Release geckodriver 0.19.1. r=jgraham
MozReview-Commit-ID: 4G4Vk5D86Nm

UltraBlame original commit: 8b34606d8f3b832fcadb954681b1fb157fef34ed

--- a/testing/geckodriver/Cargo.toml
+++ b/testing/geckodriver/Cargo.toml
@@ -13,41 +13,23 @@ version
 .
 19
 .
-0
+1
 "
 authors
 =
 [
 "
-James
-Graham
+Mozilla
 <
-james
-hoppipolla
+tools
+-
+marionette
+lists
 .
-co
+mozilla
 .
-uk
+org
 >
-"
-"
-Andreas
-Tolfsen
-<
-ato
-sny
-.
-no
->
-"
-"
-Henrik
-Skupin
-<
-mail
-hskupin
-.
-info
 "
 ]
 description
