Bug 1412136 - [taskgraph] Use 'mergeDeep' in templates, r=dustin
MozReview-Commit-ID: 2foWko3i4NK

UltraBlame original commit: f70c299caf77e6d5e30a186ba9dc56170c7917d9

--- a/taskcluster/taskgraph/templates/artifact.yml
+++ b/taskcluster/taskgraph/templates/artifact.yml
@@ -18,7 +18,7 @@ build
 "
 then
 :
-merge
+mergeDeep
 :
 -
 eval
@@ -27,56 +27,16 @@ task
 -
 extra
 :
-merge
-:
--
-eval
-:
-task
-.
-extra
--
 treeherder
 :
-merge
-:
--
-eval
-:
-task
-.
-extra
-.
-treeherder
--
 symbol
 :
 Ba
 -
 payload
 :
-merge
-:
--
-eval
-:
-task
-.
-payload
--
 env
 :
-merge
-:
--
-eval
-:
-task
-.
-payload
-.
-env
--
 USE_ARTIFACT
 :
 eval
