--- a/taskcluster/taskgraph/templates/env.yml
+++ b/taskcluster/taskgraph/templates/env.yml
@@ -1,4 +1,4 @@
-merge
+mergeDeep
 :
 -
 eval
@@ -7,28 +7,8 @@ task
 -
 payload
 :
-merge
-:
--
-eval
-:
-task
-.
-payload
--
 env
 :
-merge
-:
--
-eval
-:
-task
-.
-payload
-.
-env
--
 eval
 :
 input
