Bug 1412136 - [taskgraph] Don't assume all tasks have a 'tags' attribute in artifact template, r=dustin
MozReview-Commit-ID: IbiD2zbCeh

UltraBlame original commit: 68a8bde575ef1669a3c05e8c91b009c20948c27f

--- a/taskcluster/taskgraph/templates/artifact.yml
+++ b/taskcluster/taskgraph/templates/artifact.yml
@@ -4,12 +4,22 @@
 if
 :
 task
+[
+"
+tags
+"
+]
+then
+:
+if
+:
+task
 .
 tags
 [
-'
+"
 kind
-'
+"
 ]
 =
 =
@@ -44,6 +54,11 @@ eval
 input
 .
 enabled
+else
+:
+eval
+:
+task
 else
 :
 eval
