--- a/dom/security/test/csp/mochitest.ini
+++ b/dom/security/test/csp/mochitest.ini
@@ -1455,3 +1455,33 @@ html
 ^
 headers
 ^
+[
+test_worker_src
+.
+html
+]
+support
+-
+files
+=
+file_worker_src_worker_governs
+.
+html
+file_worker_src_child_governs
+.
+html
+file_worker_src_script_governs
+.
+html
+file_worker_src
+.
+js
+file_spawn_worker
+.
+js
+file_spawn_shared_worker
+.
+js
+file_spawn_service_worker
+.
+js
