--- a/dom/security/test/csp/mochitest.ini
+++ b/dom/security/test/csp/mochitest.ini
@@ -1485,3 +1485,24 @@ js
 file_spawn_service_worker
 .
 js
+[
+test_frame_src
+.
+html
+]
+support
+-
+files
+=
+file_frame_src_frame_governs
+.
+html
+file_frame_src_child_governs
+.
+html
+file_frame_src
+.
+js
+file_frame_src_inner
+.
+html
