Bug 1376773 - Disable test_crash.py on osx for frequent failures. r=me, a=testonly
UltraBlame original commit: bc28e43839fb2216300d42b09ac699a42d5a5187

--- a/testing/marionette/harness/marionette_harness/tests/unit/unit-tests.ini
+++ b/testing/marionette/harness/marionette_harness/tests/unit/unit-tests.ini
@@ -774,11 +774,27 @@ appname
 '
 fennec
 '
+|
+|
+(
+os
+=
+=
+'
+mac
+'
+&
+&
+!
+debug
+)
 #
 Bug
 1298921
 bug
 1322993
+bug
+1376773
 [
 test_localization
 .
