Bug 1405453 - Disable browser/components/extensions/test/browser/test-oop-extensions/browser_ext_browserAction_context.js on windows and mac for frequent failures. r=me, a=testonly
UltraBlame original commit: d2a28224621937beaa903135af3d9f49ea287ab3

--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -223,6 +223,27 @@ browser_ext_browserAction_context
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+|
+|
+os
+=
+=
+'
+mac
+'
+#
+Bug
+1405453
 [
 browser_ext_browserAction_contextMenu
 .
