Bug 1411810 - Disable /webrtc/RTCDTMFSender-ontonechange.https.html on windows non e10s for frequent failures. r=me, a=testonly
UltraBlame original commit: e6028f5b67bf02fed17fc4b5d371b5f8333ae06f

--- a/testing/web-platform/meta/webrtc/RTCDTMFSender-ontonechange.https.html.ini
+++ b/testing/web-platform/meta/webrtc/RTCDTMFSender-ontonechange.https.html.ini
@@ -7,6 +7,57 @@ https
 .
 html
 ]
+disabled
+:
+if
+debug
+and
+stylo
+and
+not
+e10s
+and
+(
+os
+=
+=
+"
+win
+"
+)
+and
+(
+version
+=
+=
+"
+6
+.
+1
+.
+7601
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+(
+bits
+=
+=
+32
+)
+:
+#
+Bug
+1411810
 [
 insertDTMF
 (
@@ -145,203 +196,5 @@ from
 firing
 ]
 expected
-:
-FAIL
-[
-insertDTMF
-(
-)
-with
-duration
-less
-than
-40
-should
-be
-clamped
-to
-40
-]
-expected
-:
-if
-debug
-and
-stylo
-and
-not
-e10s
-and
-(
-os
-=
-=
-"
-win
-"
-)
-and
-(
-version
-=
-=
-"
-6
-.
-1
-.
-7601
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-and
-(
-bits
-=
-=
-32
-)
-:
-FAIL
-[
-insertDTMF
-(
-)
-with
-interToneGap
-less
-than
-30
-should
-be
-clamped
-to
-30
-]
-expected
-:
-if
-debug
-and
-stylo
-and
-not
-e10s
-and
-(
-os
-=
-=
-"
-win
-"
-)
-and
-(
-version
-=
-=
-"
-6
-.
-1
-.
-7601
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-and
-(
-bits
-=
-=
-32
-)
-:
-FAIL
-[
-Calling
-insertDTMF
-(
-'
-'
-)
-in
-the
-middle
-of
-tonechange
-events
-should
-stop
-future
-tonechange
-events
-from
-firing
-]
-expected
-:
-if
-debug
-and
-stylo
-and
-not
-e10s
-and
-(
-os
-=
-=
-"
-win
-"
-)
-and
-(
-version
-=
-=
-"
-6
-.
-1
-.
-7601
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-and
-(
-bits
-=
-=
-32
-)
 :
 FAIL
