--- a/servo/components/allocator/Cargo.toml
+++ b/servo/components/allocator/Cargo.toml
@@ -63,6 +63,33 @@ jemallocator
 "
 ]
 [
+dependencies
+]
+libc
+=
+"
+0
+.
+2
+"
+#
+Only
+used
+when
+'
+unstable
+'
+is
+disabled
+but
+looks
+like
+Cargo
+cannot
+express
+that
+.
+[
 target
 .
 '
@@ -87,7 +114,7 @@ version
 .
 1
 .
-3
+4
 "
 optional
 =
