Bug 1412690 - fennec per task notifications. r=garbas
This patch adds per-task pulse notifications, as well as general support
to handle them.

Longer term we may move away from pulse-notifications, but this allows
us to proceed with pulse-notifications until that time.

MozReview-Commit-ID: 1uB4X682yLT

UltraBlame original commit: ab1b3bdb14f2bcb40a9db6024bb6afc68d4dd940

--- a/taskcluster/ci/release-bouncer-aliases/kind.yml
+++ b/taskcluster/ci/release-bouncer-aliases/kind.yml
@@ -243,3 +243,17 @@ http
 localhost
 /
 api
+notifications
+:
+completed
+:
+-
+releasetasks
+failed
+:
+-
+releasetasks
+exception
+:
+-
+releasetasks
