Bug 1412690 - fennec release driver emails. r=aki
This patch adds the `release-notify-promote` and `release-notify-publish` kinds. It also genericizes all the notifications, and updates the kinds that use those notifications.

MozReview-Commit-ID: 9ymXKzthVF4

UltraBlame original commit: 7f4e848f8449e71a2b98540daeeac49f254d89aa

--- a/taskcluster/ci/release-mark-as-shipped/kind.yml
+++ b/taskcluster/ci/release-mark-as-shipped/kind.yml
@@ -208,13 +208,118 @@ notifications
 :
 completed
 :
+by
 -
-releasetasks
+project
+:
+maple
+:
+-
+"
+release
+-
+drivers
+-
+staging
+"
+try
+:
+#
+-
+"
+{
+task
+[
+tags
+]
+[
+createdForUser
+]
+}
+"
+default
+:
+-
+"
+release
+-
+drivers
+"
 failed
 :
+by
 -
-releasetasks
-exception
+project
+:
+maple
 :
 -
-releasetasks
+"
+release
+-
+drivers
+-
+staging
+"
+try
+:
+#
+-
+"
+{
+task
+[
+tags
+]
+[
+createdForUser
+]
+}
+"
+default
+:
+-
+"
+release
+-
+drivers
+"
+exception
+:
+by
+-
+project
+:
+maple
+:
+-
+"
+release
+-
+drivers
+-
+staging
+"
+try
+:
+#
+-
+"
+{
+task
+[
+tags
+]
+[
+createdForUser
+]
+}
+"
+default
+:
+-
+"
+release
+-
+drivers
+"
