--- a/taskcluster/ci/release-version-bump/kind.yml
+++ b/taskcluster/ci/release-version-bump/kind.yml
@@ -111,10 +111,14 @@ fennec
 name
 :
 fennec
+-
 version
+-
 bump
 description
 :
+Release
+Promotion
 version
 bump
 worker
@@ -209,13 +213,118 @@ notifications
 :
 completed
 :
+by
 -
-releasetasks
+project
+:
+maple
+:
+-
+"
+release
+-
+drivers
+-
+staging
+"
+try
+:
+#
+-
+"
+{
+task
+[
+tags
+]
+[
+createdForUser
+]
+}
+"
+default
+:
+-
+"
+release
+-
+drivers
+"
 failed
 :
+by
 -
-releasetasks
-exception
+project
+:
+maple
 :
 -
-releasetasks
+"
+release
+-
+drivers
+-
+staging
+"
+try
+:
+#
+-
+"
+{
+task
+[
+tags
+]
+[
+createdForUser
+]
+}
+"
+default
+:
+-
+"
+release
+-
+drivers
+"
+exception
+:
+by
+-
+project
+:
+maple
+:
+-
+"
+release
+-
+drivers
+-
+staging
+"
+try
+:
+#
+-
+"
+{
+task
+[
+tags
+]
+[
+createdForUser
+]
+}
+"
+default
+:
+-
+"
+release
+-
+drivers
+"
